<resources>
    <string name="app_name">兜兜商家</string>

    <!-- Tab -->
    <string name="tab_order_management">订单管理</string>
    <string name="tab_order_search">订单查询</string>
    <string name="tab_shop_management">店铺管理</string>
    <string name="tab_my_setting">我的设置</string>

    <!-- S1 登入頁 -->
        <!-- S1.1.0登入或註冊 -->
        <string name="signin_et_enter_cellphone">请输入手机号码</string>
        <string name="signin_et_enter_pwd">请输入密码</string>
        <string name="signin_tv_forgot_pwd">忘记密码</string>
        <string name="signin_btn_signin">登入</string>

        <!-- S1.2.0登入-忘記密碼-1輸入手機號碼 -->
        <string name="signin_forgot_pwd_tv_title">忘记密码</string>
        <string name="signin_forgot_pwd_et_enter_cellphone">手机号码</string>
        <string name="signin_forgot_pwd_btn_get_code">取得验证码</string>
        <!-- S1.2.0登入-忘記密碼-2輸入驗證碼 -->
        <string name="signin_forgot_pwd_et_enter_code">请输入验证码</string>
        <string name="signin_forgot_pwd_btn_confirm_code">确认验证码</string>
        <string name="signin_forgot_pwd_tv_countdown">%1$s后可重发验证码</string>
        <!-- S1.2.0登入-忘記密碼-3設定新密碼 -->
        <string name="signin_forgot_pwd_setting_new_tv_title">设定新密码</string>
        <string name="signin_forgot_pwd_setting_new_et_new_pwd">新密码</string>
        <string name="signin_forgot_pwd_setting_new_et_new_confirm_new_pwd">确认新密码</string>
        <string name="signin_forgot_pwd_setting_new_btn_confirm_code">确定</string>


    <!-- S2 訂單管理 -->



    <!-- S3 訂單查詢 -->



    <!-- S4 店鋪管理 -->

    <!-- S4.0.0門店管理 -->
    <string name="shop_detail_phone">店铺电话：%1$s</string>
    <string name="shop_detail_address">店铺地址：%1$s</string>
    <string name="shop_detail_btn_shop_detail">查看店铺</string>
    <!-- middle -->
    <string name="shop_detail_new_order">今日新订单</string>
    <string name="shop_detail_today_sum_num">￥ %1$d</string>
    <string name="shop_detail_today_sum">今日营业额</string>
    <string name="shop_detail_sum_30_days_num">￥ %1$d</string>
    <string name="shop_detail_sum_30_days">近30天营收</string>

    <string name="shop_detail_browse_goods">浏览商品</string>
    <string name="shop_detail_order_management">订单管理</string>
    <string name="shop_detail_message_centre">消息中心</string>
    <string name="shop_detail_settle_account">结算管理</string>

        <!-- S4.4.0 消息中心 -->
        <string name="message_header_title">消息</string>


    <!-- S6.0.0我的設置 -->
    <string name="setting_title">我的设置</string>
    <string name="setting_notification">提醒通知</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_clean">清除缓存</string>
    <string name="setting_signout">退出登录</string>


    <!-- S2.0.0 訂單管理 -->
    <string name="order_header_title">订单管理</string>
    <string name="order_header_title_send">请寄货</string>
    <string name="order_header_title_refund_reject">退货驳回</string>
    <string name="order_header_title_confirm">确认</string>

        <string name="order_total_amount">共%1$d件商品</string>
        <string name="order_total">合计：</string>
        <string name="order_total_num">￥ %1$d</string>

        <string name="order_goods_category">分类： %1$s</string>
        <string name="order_goods_price">￥ %1$d</string>
        <string name="order_goods_amount">x %1$d</string>

        <!-- S2.0.0訂單管理-請寄貨-服務人員 -->
        <string name="order_send">物流配送</string>
        <string name="order_sender_go">服务人员己出发</string>
        <string name="order_send_enter_company">请输入物流公司</string>
        <string name="order_send_enter_id">请输入物流编号</string>

        <!-- S2.0.0訂單管理-駁回原因 -->
        <string name="order_send_refund_reason">请输入駁回原因</string>
        <string name="order_send_require_id">请输入物流编号</string>

    <!-- S2.0.0訂單詳情 -->
    <!-- 收貨人資訊區塊 -->
    <string name="order_detail_header_title">订单详情</string>
    <string name="order_detail_receiver">收货人: %1$s</string>
    <string name="order_detail_address">收货地址: %1$s</string>

    <!-- 店家資訊區塊 -->
    <string name="order_detail_shop_phone">店铺电话:%1$s</string>
    <string name="order_detail_shop_community">(%1$s小區/%2$s社區)</string>
    <string name="order_detail_goods_category">分类：%1$s</string>
    <string name="order_detail_goods_price">￥ %1$d</string>
    <string name="order_detail_message">买家留言：%1$s</string>
    <string name="order_detail_total_amount">共%1$d件商品</string>
    <string name="order_detail_total">合计：</string>
    <string name="order_detail_total_num">￥ %1$d</string>
    <string name="order_detail_btn_del">删除订单</string>

    <!-- 訂單資訊區塊 -->
    <string name="order_detail_info_id">订单编号: %1$s</string>
    <string name="order_detail_info_payment">支付方式: %1$s</string>
    <string name="order_detail_info_logistics">物流名称: %1$s</string>
    <string name="order_detail_info_logistics_id">物流编号: %1$s</string>
    <string name="order_detail_info_order_time">下单时间: %1$s</string>
    <string name="order_detail_info_pay_time">付款时间: %1$s</string>
    <string name="order_detail_info_sent_time">发货时间: %1$s</string>


    <!-- S3.0.0訂單查詢-篩選 -->
    <string name="order_search_header_title">订单查詢-待发货</string>
    <string name="order_search_header_title_selector">筛选</string>
    <string name="order_search_header_title_selector_confirm">确认</string>

    <string name="order_search_tab_today">今日</string>
    <string name="order_search_tab_this_week">本周</string>
    <string name="order_search_tab_this_month">本月</string>
    <string name="order_search_tab_custom">自订</string>

    <string name="order_search_selector_search_hint">订单编号/商品名称/用户名/用户登录号</string>
    <string name="order_search_selector_search_order_status">订单状态</string>
    <string name="order_search_selector_search_order_dtae">订购日期</string>
    <string name="order_search_selector_search_start_date">起始日期</string>
    <string name="order_search_selector_search_end_data">迄止日期</string>

    <!-- S4.2.0商品瀏覽 -->
    <string name="shop_goods_overview_header_title">浏览商品</string>
    <string name="shop_goods_overview_goods_price">￥ %1$d</string>
    <string name="shop_goods_overview_goods_reserve_amount">库存量：%1$d</string>
    <string name="shop_goods_overview_goods_sales_amount">销售量：%1$d</string>

    <!-- S4.2.1商品明細 -->
    <string name="shop_goods_detail">商品明细</string>
    <string name="shop_goods_detail_tab1">商品</string>
    <string name="shop_goods_detail_tab2">评价</string>
    <string name="shop_goods_detail_price">￥ %1$d</string>
    <string name="shop_goods_detail_reserve_amount">库存：%1$d</string>
    <string name="shop_goods_detail_sales_amount">销量：%1$d</string>

    <!-- S4.4.0結算管理 -->
    <!-- S4.4.0結算管理-查詢 -->
    <string name="shop_billing_selector_header_title">查询</string>
    <string name="shop_billing_selector">结帐月份</string>
    <string name="shop_billing_selector_this_month">本月</string>
    <string name="shop_billing_selector_three_months">三个月</string>
    <string name="shop_billing_selector_half_year">半年</string>
    <string name="shop_billing_selector_custom">自订</string>
    <string name="shop_billing_selector_start_month">起始月份</string>
    <string name="shop_billing_selector_end_month">迄止月份</string>
    <string name="shop_billing_selector_list_item">%1$s结帐单</string>
    <!-- S4.4.0 結算管理-總表 -->
    <string name="shop_billing_summary_header_title">本期结算</string>
    <string name="shop_billing_summary_settlement_date">结算日期</string>
    <string name="shop_billing_summary_shop_id">商家编号</string>
    <string name="shop_billing_summary_shop_name">店铺名称</string>
    <string name="shop_billing_summary_community_manager">社区管理员</string>
    <string name="shop_billing_summary_platform_manage">平台管理</string>
    <string name="shop_billing_summary_shop_receivables">商家应收款项</string>
    <string name="shop_billing_summary_payment">货款</string>
    <string name="shop_billing_summary_system_commission">系统管理员佣金</string>
    <string name="shop_billing_summary_platform_commission">平台佣金</string>
    <string name="shop_billing_summary_shop_subtotal">商家应收小计：</string>
    <string name="shop_billing_summary_shop_subtotal_price">￥ %1$d</string>
    <string name="shop_billing_summary_btn_detail">查看明细</string>
    <string name="shop_billing_summary_btn_other">查询其他月份</string>
    <!-- S4.4.0 結算管理-明細 -->
    <string name="shop_billing_detail_header_title">%1$s结算明细</string>
    <string name="shop_billing_detail_order_id">订单编号： %1$d</string>
    <string name="shop_billing_detail_order_payment">货款：</string>
    <string name="shop_billing_detail_system_commission">系統管理員佣金：</string>
    <string name="shop_billing_detail_platform_commission">平台佣金：</string>
    <string name="shop_billing_detail_period_summary">本期合计</string>



</resources>
