<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@mipmap/img_navi_background">

        <ImageButton
            android:id="@+id/ibtn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/common_ddou_return_left_space"
            android:layout_marginTop="@dimen/common_ddou_return_top_space"
            android:background="@drawable/selector_btn_return_white"
            android:contentDescription="return"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:text="@string/order_search_header_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textSize="@dimen/header_txt_sp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:text="@string/order_search_header_title_selector"
            android:textColor="@android:color/white"
            android:textSize="@dimen/header_txt_sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/order_search_tab_tb"
        android:paddingTop="@dimen/order_search_tab_tb">

        <Button
            android:id="@+id/btn_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/order_search_tab_btn_lr_space"
            android:layout_weight="1"
            android:background="@mipmap/btn_small_gray"
            android:text="@string/order_search_tab_today"
            android:textColor="@android:color/black"
            android:textSize="@dimen/order_search_tab_size" />

        <Button
            android:id="@+id/btn_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/order_search_tab_btn_space"
            android:layout_weight="1"
            android:background="@mipmap/btn_small_gray"
            android:text="@string/order_search_tab_this_week"
            android:textColor="@android:color/black"
            android:textSize="@dimen/order_search_tab_size" />

        <Button
            android:id="@+id/btn_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/order_search_tab_btn_space"
            android:layout_weight="1"
            android:background="@mipmap/btn_small_gray"
            android:text="@string/order_search_tab_this_month"
            android:textColor="@android:color/black"
            android:textSize="@dimen/order_search_tab_size" />

        <Button
            android:id="@+id/btn_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/order_search_tab_btn_space"
            android:layout_marginRight="@dimen/order_search_tab_btn_lr_space"
            android:layout_weight="1"
            android:background="@mipmap/btn_small_gray"
            android:text="@string/order_search_tab_custom"
            android:textColor="@android:color/black"
            android:textSize="@dimen/order_search_tab_size" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/order_search_tab_tb"
        android:background="@color/color_eaeaea" />

</LinearLayout>