<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@mipmap/img_navi_background">

        <ImageButton
            android:id="@+id/ibtn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/common_ddou_return_left_space"
            android:layout_marginTop="@dimen/common_ddou_return_top_space"
            android:background="@drawable/selector_btn_return_white"
            android:contentDescription="return" />

        <TextView
            android:id="@+id/tv_header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:text="@string/order_header_title_send"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textSize="@dimen/header_txt_sp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:text="@string/order_header_title_confirm"
            android:textColor="@android:color/white"
            android:textSize="@dimen/header_txt_sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_send_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/order_send_check_space"
        android:paddingLeft="@dimen/order_send_check_space"
        android:paddingRight="@dimen/order_send_check_space"
        android:paddingTop="@dimen/order_send_check_space">

        <CheckBox
            android:id="@+id/cb_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:button="@drawable/selector_cb_default"
            android:paddingLeft="@dimen/order_send_cb_left_space"
            android:text="@string/order_send"
            android:textColor="@color/color_9b9b9b"
            android:textSize="@dimen/order_send_txt_size" />

        <CheckBox
            android:id="@+id/cb_sender_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="false"
            android:button="@drawable/selector_cb_default"
            android:paddingLeft="@dimen/order_send_cb_left_space"
            android:text="@string/order_sender_go"
            android:textColor="@color/color_9b9b9b"
            android:textSize="@dimen/order_send_txt_size" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/img_line_1000" />

    <LinearLayout
        android:id="@+id/ll_send_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/order_send_et_left_space"
        android:paddingRight="@dimen/order_send_et_right_space">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_send_tv_top_space"
            android:text="@string/order_send_enter_company"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_9b9b9b"
            android:textSize="@dimen/order_send_txt_size" />

        <EditText
            android:id="@+id/et_send_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_send_et_top_space"
            android:background="@mipmap/img_square"
            android:ems="11"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/order_send_txt_size" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_send_tv_top_space"
            android:text="@string/order_send_enter_id"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_9b9b9b"
            android:textSize="@dimen/order_send_txt_size" />

        <EditText
            android:id="@+id/et_send_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_send_et_top_space"
            android:background="@mipmap/img_square"
            android:ems="11"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:textSize="@dimen/order_send_txt_size" />
    </LinearLayout>


</LinearLayout>