<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@mipmap/img_navi_background">

        <ImageButton
            android:id="@+id/ibtn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/common_ddou_return_left_space"
            android:layout_marginTop="@dimen/common_ddou_return_top_space"
            android:background="@drawable/selector_btn_return_white"
            android:contentDescription="return" />

        <TextView
            android:id="@+id/tv_header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:text="@string/order_header_title_refund_reject"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textSize="@dimen/header_txt_sp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:text="@string/order_header_title_confirm"
            android:textColor="@android:color/white"
            android:textSize="@dimen/header_txt_sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/order_return_reject_tv_tb_space"
        android:layout_marginTop="@dimen/order_return_reject_tv_tb_space"
        android:text="@string/order_send_refund_reason"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/color_9b9b9b"
        android:textSize="@dimen/order_return_reject_et_size" />

    <EditText
        android:id="@+id/et_return_resaon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/order_return_reject_et_lr_space"
        android:layout_marginRight="@dimen/order_return_reject_et_lr_space"
        android:background="@mipmap/img_frame_returnproductreason" />
</LinearLayout>